--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,109 @@
-.App {
+.navBar {
+  display: flex;
+  flex-direction: row;
+  background-color: rgb(211, 211, 211);
+  border-bottom-style: solid;
+  border-bottom-width: 2px;
+  border-bottom-color: rgb(175, 175, 175);
+  align-items: center;
+  min-height: 40px;
+  padding-left: 25px;
+  font-size: large;
+}
+
+.cart-items {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-left: 20px;
+}
+
+.cart-num {
+  background-color: grey;
+  color: white;
+  border-radius: 5px;
+  text-align: center;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-left: 5px;
+}
+
+.cards {
+  display: flex;
+  margin: 20px;
+}
+
+.card-prop {
+  border-style: solid;
+  border-width: 2px;
+  border-color: rgb(211, 211, 211);
+  max-width: 400px;
+}
+
+.card-header {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.card {
+  border-style: solid;
+  border-width: 2px;
+  border-color: rgb(211, 211, 211);
+  border-radius: 10px;
+  margin: 15px;
+  max-width: 400px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.card-img-top {
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.card-body {
+  margin: 0px;
+}
+
+.card-footer{
+  font-size: 12px;
+  padding: 5px;
+  text-align: center;
+}
+
+.btn {
+  background-color: cornflowerblue;
   color: white;
+  padding-top: 10px;
+  padding-bottom: 5px;
+  padding-left: 60px;
+  padding-right: 60px;
+  margin: 3px;
+  margin-top: 15px;
+  border-radius: 3px;
+  border-width: 0px;
 }
 
-.App-link {
-  color: #61dafb;
+a {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.cart-container {
+  margin: 20px;
+}
+
+.card-cart {
+  display: flex;
+  flex-direction: row;
+  border-style: solid;
+  border-width: 2px;
+  border-color: rgb(211, 211, 211);
+  border-radius: 10px;
+  max-width: 500px;
+}
+
+.card-img-left {
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
 }
