--- a/src/App.css
+++ b/src/App.css
@@ -81,7 +81,20 @@
 }
 
 .btn {
-  background-color: cornflowerblue;
+  background-color: red;
+  color: white;
+  padding-top: 10px;
+  padding-bottom: 5px;
+  padding-left: 60px;
+  padding-right: 60px;
+  margin: 3px;
+  margin-top: 15px;
+  border-radius: 3px;
+  border-width: 0px;
+}
+
+.btn-grey {
+  background-color: grey;
   color: white;
   padding-top: 10px;
   padding-bottom: 5px;
